Lowered Version ServiceStack.Text reference

--- a/src/ServiceStack.Text.EnumMemberSerializer.UnitTests/ServiceStack.Text.EnumMemberSerializer.UnitTests.csproj
+++ b/src/ServiceStack.Text.EnumMemberSerializer.UnitTests/ServiceStack.Text.EnumMemberSerializer.UnitTests.csproj
@@ -39,9 +39,8 @@
     <Reference Include="Rhino.Mocks">
       <HintPath>..\packages\RhinoMocks.3.6.1\lib\net\Rhino.Mocks.dll</HintPath>
     </Reference>
-    <Reference Include="ServiceStack.Text, Version=3.9.45.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\ServiceStack.Text.3.9.49\lib\net35\ServiceStack.Text.dll</HintPath>
+    <Reference Include="ServiceStack.Text">
+      <HintPath>..\packages\ServiceStack.Text.3.9.44\lib\net35\ServiceStack.Text.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Runtime.Serialization" />
