Created IEnumSerializerConfigurator to allow easier upstream mocking/testing/etc.

--- a/src/ServiceStack.Text.EnumMemberSerializer/ServiceStack.Text.EnumMemberSerializer.csproj
+++ b/src/ServiceStack.Text.EnumMemberSerializer/ServiceStack.Text.EnumMemberSerializer.csproj
@@ -49,6 +49,7 @@
     <Compile Include="EnumSerializerHelpersProxy.cs" />
     <Compile Include="EnumTypeExtensions.cs" />
     <Compile Include="FieldInfoExtensions.cs" />
+    <Compile Include="IEnumSerializerConfigurator.cs" />
     <Compile Include="IEnumSerializerHelpersProxy.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
