--- a/src/ServiceStack.Text.EnumMemberSerializer/ServiceStack.Text.EnumMemberSerializer.csproj
+++ b/src/ServiceStack.Text.EnumMemberSerializer/ServiceStack.Text.EnumMemberSerializer.csproj
@@ -45,12 +45,13 @@
     <Compile Include="CollectionExtensions.cs" />
     <Compile Include="EnumMemberAttributeExtensions.cs" />
     <Compile Include="EnumSerializerConfigurator.cs" />
-    <Compile Include="EnumSerializerHelpers.cs" />
-    <Compile Include="EnumSerializerHelpersProxy.cs" />
+    <Compile Include="PrettyEnumHelpers.cs" />
+    <Compile Include="EnumSerializerInitializerProxy.cs" />
+    <Compile Include="EnumSerializerInitializer.cs" />
     <Compile Include="EnumTypeExtensions.cs" />
     <Compile Include="FieldInfoExtensions.cs" />
     <Compile Include="IEnumSerializerConfigurator.cs" />
-    <Compile Include="IEnumSerializerHelpersProxy.cs" />
+    <Compile Include="IEnumSerializerInitializerProxy.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
