Add support for nullable enums and test ServiceStack.Text v4 support.

--- a/src/ServiceStack.Text.EnumMemberSerializer.UnitTests/ServiceStack.Text.EnumMemberSerializer.UnitTests.csproj
+++ b/src/ServiceStack.Text.EnumMemberSerializer.UnitTests/ServiceStack.Text.EnumMemberSerializer.UnitTests.csproj
@@ -64,6 +64,7 @@
     <Compile Include="EnumSerializerConfiguratorTests.cs" />
     <Compile Include="EnumSerializerInitializerProxyFake.cs" />
     <Compile Include="EnumSerializerInitializerProxyTests.cs" />
+    <Compile Include="EnumSerializerInitializerTests.cs" />
     <Compile Include="PrettyEnumHelpersTests.cs" />
     <Compile Include="FakeTestingEnum.cs" />
     <Compile Include="FieldInfoExtensionsTests.cs" />
