Fix for ServiceStack v4.0.42 breaking change

--- a/src/ServiceStack.Text.EnumMemberSerializer/ServiceStack.Text.EnumMemberSerializer.csproj
+++ b/src/ServiceStack.Text.EnumMemberSerializer/ServiceStack.Text.EnumMemberSerializer.csproj
@@ -46,6 +46,7 @@
     <Compile Include="EnumSerializerInitializer.cs" />
     <Compile Include="EnumMemberAttributeExtensions.cs" />
     <Compile Include="EnumSerializerConfigurator.cs" />
+    <Compile Include="JsConfigWrapper.cs" />
     <Compile Include="PrettyEnumExtensions.cs" />
     <Compile Include="PrettyEnumHelpers.cs" />
     <Compile Include="EnumSerializerInitializerProxy.cs" />
