--- a/src/ServiceStack.Text.EnumMemberSerializer.UnitTests/ServiceStack.Text.EnumMemberSerializer.UnitTests.csproj
+++ b/src/ServiceStack.Text.EnumMemberSerializer.UnitTests/ServiceStack.Text.EnumMemberSerializer.UnitTests.csproj
@@ -44,8 +44,9 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Runtime.Serialization" />
-    <Reference Include="xunit">
+    <Reference Include="xunit, Version=1.9.1.1600, Culture=neutral, PublicKeyToken=8d05b1bb7a6fdb6c, processorArchitecture=MSIL">
       <HintPath>..\packages\xunit.1.9.1\lib\net20\xunit.dll</HintPath>
+      <Private>True</Private>
     </Reference>
   </ItemGroup>
   <Choose>
@@ -65,6 +66,8 @@
     <Compile Include="EnumSerializerInitializerProxyFake.cs" />
     <Compile Include="EnumSerializerInitializerProxyTests.cs" />
     <Compile Include="EnumSerializerInitializerTests.cs" />
+    <Compile Include="JsConfigFnTargetResolver.cs" />
+    <Compile Include="JsConfigWrapperTests.cs" />
     <Compile Include="PrettyEnumHelpersTests.cs" />
     <Compile Include="FakeTestingEnum.cs" />
     <Compile Include="FieldInfoExtensionsTests.cs" />
