--- a/src/ServiceStack.Text.EnumMemberSerializer.UnitTests/ServiceStack.Text.EnumMemberSerializer.UnitTests.csproj
+++ b/src/ServiceStack.Text.EnumMemberSerializer.UnitTests/ServiceStack.Text.EnumMemberSerializer.UnitTests.csproj
@@ -1,16 +1,14 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>net46;netcoreapp1.1;net452</TargetFrameworks>
+    <TargetFrameworks>net46;netcoreapp2.0</TargetFrameworks>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.0.0" />
-    <PackageReference Include="xunit" Version="2.2.0" />
-    <PackageReference Include="xunit.runner.visualstudio" Version="2.2.0" />
-    <PackageReference Include="ServiceStack.Text.Core" Version="1.0.1" Condition="'$(TargetFramework)' == 'netcoreapp1.1'" />
-    <PackageReference Include="ServiceStack.Text" Version="3.9.44" Condition="'$(TargetFramework)' == 'net452'" />
-    <PackageReference Include="ServiceStack.Text" Version="4.5.12" Condition="'$(TargetFramework)' == 'net46'" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.6.2" />
+    <PackageReference Include="ServiceStack.Text" Version="5.0.2" />
+    <PackageReference Include="xunit" Version="2.3.1" />
+    <PackageReference Include="xunit.runner.visualstudio" Version="2.3.1" />
   </ItemGroup>
 
   <ItemGroup>
@@ -19,6 +17,12 @@
 
   <ItemGroup>
     <Service Include="{82a7f48d-3b50-4b1e-b82e-3ada8210c358}" />
+  </ItemGroup>
+
+  <ItemGroup Condition="'$(TargetFramework)' == 'netcoreapp2.0'">
+    <PackageReference Include="ServiceStack.Text.Core">
+      <Version>5.0.2</Version>
+    </PackageReference>
   </ItemGroup>
 
 </Project>
