--- a/src/ServiceStack.Text.EnumMemberSerializer/ServiceStack.Text.EnumMemberSerializer.csproj
+++ b/src/ServiceStack.Text.EnumMemberSerializer/ServiceStack.Text.EnumMemberSerializer.csproj
@@ -1,11 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?><Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netstandard1.3;net45</TargetFrameworks>
+    <TargetFrameworks>netstandard1.3;netstandard2.0;net45</TargetFrameworks>
     <Authors>Chatham Financial Corp.</Authors>
-    <Copyright>Copyright 2017 Chatham Financial Corp.</Copyright>
+    <Copyright>Copyright 2018 Chatham Financial Corp.</Copyright>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
-    <Version>2.0.0.7151</Version>
+    <Version>3.0.0.47811</Version>
     <PackageProjectUrl>https://github.com/Chatham/ServiceStack.Text.EnumMemberSerializer</PackageProjectUrl>
     <PackageLicenseUrl>https://github.com/Chatham/ServiceStack.Text.EnumMemberSerializer/blob/master/LICENSE</PackageLicenseUrl>
     <RepositoryUrl>https://github.com/Chatham/ServiceStack.Text.EnumMemberSerializer</RepositoryUrl>
@@ -17,7 +17,8 @@
 
   <ItemGroup>
     <PackageReference Include="ServiceStack.Text.Core" Version="1.0.1" Condition="'$(TargetFramework)' == 'netstandard1.3'" />
-    <PackageReference Include="ServiceStack.Text" Version="3.9.44" Condition="'$(TargetFramework)' == 'net45'" />
+    <PackageReference Include="ServiceStack.Text" Version="5.0.0" Condition="'$(TargetFramework)' == 'netstandard2.0'" />
+    <PackageReference Include="ServiceStack.Text" Version="5.0.0" Condition="'$(TargetFramework)' == 'net45'" />
   </ItemGroup>
 
 </Project>
